--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@emotion/styled": "^11.10.6",
     "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.11.11",
+    "@mui/lab": "^5.0.0-alpha.122",
     "@mui/material": "^5.11.12",
+    "@mui/x-date-pickers": "^6.0.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -17,6 +19,7 @@
     "@types/react-dom": "^18.0.11",
     "axios": "^1.3.4",
     "babel-jest": "^29.5.0",
+    "dayjs": "^1.11.7",
     "jest": "^29.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
